fix wrap cards

--- a/ClientApp/notes/src/App.css
+++ b/ClientApp/notes/src/App.css
@@ -57,13 +57,12 @@
 }
 
 .Nav-panel {
-  flex-direction: row;
+  position: sticky;
+  top: 0;
   background-color: #FFE5EB;
-  min-height: 5vh;
-  display: flex;
-  align-items: center;
   justify-content: left;
-  font-size: calc(10px + 1vmin);
+  font-size: 20px;
+  font-weight: bold;
   color: black;
 }
 
