--- a/ClientApp/notes/src/components/note/NoteCardsList.css
+++ b/ClientApp/notes/src/components/note/NoteCardsList.css
@@ -3,10 +3,8 @@
     margin: 20px;
 
     display: grid;
+    
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 
-    grid-template-columns: repeat(7, 1fr);
-
-    grid-auto-rows: auto;
-
-    grid-gap: 1rem;
+    grid-gap: 10px;
 }
